# flappy-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/source/: app.cpp  main.cpp
core/game/: CMakeLists.txt  game.cpp  game.hpp
core/interface/: CMakeLists.txt  color.hpp  inputer.cpp  inputer.hpp  renderer.cpp  renderer.hpp
core/pipe/: CMakeLists.txt  pipe.cpp  pipe.hpp
core/platform/raylib/: rl_inputer.hpp  rl_renderer.hpp
core/player/: CMakeLists.txt  player.cpp  player.hpp
core/scenario/: CMakeLists.txt  scenario.cpp
core/score/: CMakeLists.txt  score.cpp  score.hpp
core/source/: constants.h  globals.h
core/source/background/: background.cpp  background.h
core/source/example/: factorial.cpp  factorial.hpp
core/source/floor/: floor.cpp  floor.h
core/source/game/: game.cpp  game.h  game.hpp
core/source/multiplayer/: network.cpp  network.h  pubsub.cpp
core/source/network/: network.cpp  network.h
core/source/pipe/: pipe.cpp  pipe.h  pipe.hpp
core/source/player/: player.cpp  player.h  player.hpp
core/source/pubsub/: pubsub.cpp  pubsub.h
core/source/scenario/: background.cpp  scenario.cpp  scenario.hpp
core/source/score/: score.cpp  score.h  score.hpp
core/source/sound/: sound.cpp  sound.hpp
core/source/sprite/: sprite.cpp  sprite.h  sprite.hpp
core/sprite/: CMakeLists.txt  sprite.cpp  sprite.hpp
engine/component/: animation.hpp  collider.hpp  collision.hpp  component.hpp  componentInterface.hpp  input.hpp  physics.hpp  render.hpp  transform.hpp
engine/core/: engine.cpp  engine.hpp
engine/entity/: entity.hpp
engine/resource/: resource_manager.hpp
engine/system/: animation.hpp  collider.hpp  collision.hpp  input.hpp  physics.hpp  render.hpp  system.hpp  systemInterface.hpp
engine/utils/: memory.hpp
games/flappy/: CMakeLists.txt  main.cpp  usage.cpp
games/flappy/include/: ground.hpp  pipe.hpp  player.hpp  roof.hpp  sprite.hpp
games/flappy/src/: ground.cpp  pipe.cpp  player.cpp  roof.cpp
main/: CMakeLists.txt  main.c  main.cpp
main/core/source/game/: game.cpp  game.hpp
main/core/source/multiplayer/: pubsub.h
main/core/source/pipe/: pipe.cpp  pipe.hpp
main/core/source/player/: player.cpp  player.hpp
main/core/source/scenario/: scenario.hpp
main/core/source/score/: score.cpp  score.hpp
main/core/source/sprite/: sprite.cpp  sprite.hpp
platform/desktop/: rl_inputer.hpp  rl_renderer.hpp
platform/esp32/: esp32_inputer.hpp  esp32_renderer.hpp
platform/interface/: inputer.cpp  inputer.hpp  renderer.cpp  renderer.hpp
platform/pico/: CMakeLists.txt  rp2040_inputer.hpp  rp2040_renderer.hpp
platform/pico/rp2040/: CMakeLists.txt  main.c  main.cpp  st7789.c  st7789.cpp  st7789.h  st7789.hpp
platform/pico/rp2040/st7789/: driver_st7789.c  driver_st7789.h  driver_st7789_font.h
platform/raylib/: rl_inputer.hpp  rl_renderer.hpp
resources/: SpiderWeb.aseprite  background_night.aseprite
resources/obstacles/: topPipe_full.aseprite
resources/scenario/: background_day_full.aseprite  bone.aseprite  buildings.aseprite  bushes.aseprite  clouds.aseprite
tests/core/: core_test.cpp
